--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,103 +1,115 @@
 steps:
   # ==========================================
-  # Step 1: Wait logic for running triggers
+  # Step 1: Wait logic for running triggers and MIG VM readiness
   # ==========================================
   - name: gcr.io/google.com/cloudsdktool/cloud-sdk
     entrypoint: bash
     args:
       - -c
       - |
-        echo "⏳ Checking current trigger against actively running triggers..."
+        echo "⏳ Checking ongoing triggers and MIG VM readiness..."
 
         WATCHED_TRIGGERS=("trigger-1" "trigger-3")
-        CURRENT_TRIGGER="$${_TRIGGER_NAME:-trigger-2}"
-        echo "ℹ️ Current Trigger: $$CURRENT_TRIGGER"
+        CURRENT_TRIGGER="${_TRIGGER_NAME:-trigger-2}"
+        MIG_NAME="vamsi-mig"
+        ZONE="asia-east1-b"
 
-        # Get CURRENT build info - ONLY if it's still running or queued
-        CURRENT_BUILD_INFO=$$(gcloud builds list --region=asia-east1 \
-          --filter="status:(WORKING OR QUEUED) AND substitutions.TRIGGER_NAME=$$CURRENT_TRIGGER" \
-          --sort-by="~createTime" --limit=1 \
-          --format="value(id,createTime)")
-        
-        if [[ -z "$$CURRENT_BUILD_INFO" ]]; then
-          echo "⚠️ No ongoing build found for $$CURRENT_TRIGGER (maybe already finished)."
+        echo "ℹ️ Current Trigger: $CURRENT_TRIGGER"
+
+        # Get current build info for this trigger
+        CURRENT_BUILD_INFO=$(gcloud builds list --region=asia-east1 \
+          --filter="status:(WORKING OR QUEUED) AND substitutions.TRIGGER_NAME=$CURRENT_TRIGGER" \
+          --sort-by="~createTime" --limit=1 --format="value(id,createTime)")
+
+        if [[ -z "$CURRENT_BUILD_INFO" ]]; then
+          echo "⚠️ No ongoing build found for $CURRENT_TRIGGER."
           exit 0
         fi
 
-        CURRENT_BUILD_ID=$$(echo "$$CURRENT_BUILD_INFO" | awk '{print $$1}')
-        CURRENT_START_TIME=$$(echo "$$CURRENT_BUILD_INFO" | awk '{print $$2}')
-        echo "⏰ Current build $$CURRENT_BUILD_ID started at: $$CURRENT_START_TIME"
+        CURRENT_BUILD_ID=$(echo "$CURRENT_BUILD_INFO" | awk '{print $1}')
+        CURRENT_START_TIME=$(echo "$CURRENT_BUILD_INFO" | awk '{print $2}')
 
-        # Check if this is earliest ongoing trigger
-        SKIP_WAIT="true"
-        for TRIGGER in "$${WATCHED_TRIGGERS[@]}"; do
-          if [[ "$$TRIGGER" == "$$CURRENT_TRIGGER" ]]; then
-            continue
-          fi
-          LATEST_BUILD=$$(gcloud builds list --region=asia-east1 \
-            --filter="status:(WORKING OR QUEUED) AND substitutions.TRIGGER_NAME=$$TRIGGER" \
-            --sort-by="~createTime" --limit=1 \
-            --format="value(id,createTime)")
-          if [[ -n "$$LATEST_BUILD" ]]; then
-            OTHER_START=$$(echo "$$LATEST_BUILD" | awk '{print $$2}')
-            if [[ "$$OTHER_START" < "$$CURRENT_START_TIME" ]]; then
-              SKIP_WAIT="false"
-              echo "⏳ $$TRIGGER is still running and started earlier at $$OTHER_START"
-              break
-            fi
-          fi
-        done
+        echo "⏰ Current build $CURRENT_BUILD_ID started at: $CURRENT_START_TIME"
 
-        if [[ "$$SKIP_WAIT" == "true" ]]; then
-          echo "✅ No earlier running triggers found → skipping wait logic."
-          exit 0
-        fi
-
-        echo "⚠️ Found earlier running trigger(s) → waiting for them to finish..."
-
+        # Function to wait for a build to finish
         wait_for_build() {
-          local TRIGGER_NAME=$$1
-          local BUILD_ID=$$2
+          local TRIGGER_NAME=$1
+          local BUILD_ID=$2
           while true; do
-            STATUS=$$(gcloud builds describe $$BUILD_ID --region=asia-east1 --format="value(status)")
-            if [[ "$$STATUS" == "SUCCESS" || "$$STATUS" == "FAILURE" || "$$STATUS" == "CANCELLED" ]]; then
-              echo "🔹 $$TRIGGER_NAME build $$BUILD_ID finished with $$STATUS"
+            STATUS=$(gcloud builds describe $BUILD_ID --region=asia-east1 --format="value(status)")
+            if [[ "$STATUS" == "SUCCESS" || "$STATUS" == "FAILURE" || "$STATUS" == "CANCELLED" ]]; then
+              echo "🔹 $TRIGGER_NAME build $BUILD_ID finished with $STATUS"
               break
             fi
-            echo "⏱ $$TRIGGER_NAME build $$BUILD_ID still running, waiting 15s..."
+            echo "⏱ $TRIGGER_NAME build $BUILD_ID still running, waiting 15s..."
             sleep 15
           done
-          if [[ "$$STATUS" == "SUCCESS" ]]; then
-            echo "✅ $$TRIGGER_NAME succeeded. Waiting 90 seconds..."
+          if [[ "$STATUS" == "SUCCESS" ]]; then
+            echo "✅ $TRIGGER_NAME succeeded. Waiting 90 seconds..."
             sleep 90
           else
-            echo "⚠️ $$TRIGGER_NAME failed/cancelled. Waiting 30 seconds..."
+            echo "⚠️ $TRIGGER_NAME failed/cancelled. Waiting 30 seconds..."
             sleep 30
           fi
         }
 
-        # Wait for all earlier *running* triggers
-        for TRIGGER in "$${WATCHED_TRIGGERS[@]}"; do
-          if [[ "$$TRIGGER" == "$$CURRENT_TRIGGER" ]]; then
-            continue
-          fi
-          BUILD_INFO=$$(gcloud builds list --region=asia-east1 \
-            --filter="status:(WORKING OR QUEUED) AND substitutions.TRIGGER_NAME=$$TRIGGER" \
-            --sort-by="~createTime" --limit=1 \
-            --format="value(id,createTime)")
-          if [[ -z "$$BUILD_INFO" ]]; then
-            echo "ℹ️ No running build found for $$TRIGGER, skipping."
-            continue
-          fi
-          BUILD_ID=$$(echo "$$BUILD_INFO" | awk '{print $$1}')
-          BUILD_START=$$(echo "$$BUILD_INFO" | awk '{print $$2}')
+        # Loop to check ongoing triggers
+        while true; do
+          PREV_RUNNING=0
+          PREV_TRIGGER_NAME=""
+          PREV_BUILD_ID=""
 
-          if [[ "$$BUILD_START" < "$$CURRENT_START_TIME" ]]; then
-            wait_for_build "$$TRIGGER" "$$BUILD_ID"
+          for TRIGGER in "${WATCHED_TRIGGERS[@]}"; do
+            if [[ "$TRIGGER" == "$CURRENT_TRIGGER" ]]; then
+              continue
+            fi
+
+            BUILD_INFO=$(gcloud builds list --region=asia-east1 \
+              --filter="status:(WORKING OR QUEUED) AND substitutions.TRIGGER_NAME=$TRIGGER" \
+              --sort-by="~createTime" --limit=1 --format="value(id,createTime)")
+
+            if [[ -n "$BUILD_INFO" ]]; then
+              BUILD_START=$(echo "$BUILD_INFO" | awk '{print $2}')
+              if [[ "$BUILD_START" < "$CURRENT_START_TIME" ]]; then
+                PREV_RUNNING=$((PREV_RUNNING+1))
+                PREV_TRIGGER_NAME="$TRIGGER"
+                PREV_BUILD_ID=$(echo "$BUILD_INFO" | awk '{print $1}')
+              fi
+            fi
+          done
+
+          if [[ $PREV_RUNNING -eq 0 ]]; then
+            echo "✅ No previous triggers running → skip wait and go to Step 2."
+            break
+          elif [[ $PREV_RUNNING -eq 1 ]]; then
+            echo "⏳ One previous trigger ($PREV_TRIGGER_NAME) is running → wait for MIG VM from latest template..."
+            # Get latest template
+            LATEST_TEMPLATE=$(gcloud compute instance-groups managed list-instances $MIG_NAME \
+              --zone=$ZONE \
+              --format="value(version.instanceTemplate.basename())" | sort | uniq | tail -n 1)
+
+            # Wait for at least one VM from latest template to be ready
+            while true; do
+              READY_VM=$(gcloud compute instance-groups managed list-instances $MIG_NAME \
+                  --zone=$ZONE \
+                  --format="value(name,version.instanceTemplate.basename(),currentAction,healthState)" \
+                  | awk -v tmpl="$LATEST_TEMPLATE" '$2==tmpl && $3=="NONE" && $4=="HEALTHY" {print $1}' \
+                  | head -n1)
+
+              if [[ -n "$READY_VM" ]]; then
+                echo "✅ MIG VM $READY_VM from latest template is ready → proceed to Step 2."
+                break 2
+              fi
+              echo "⏱ Waiting for MIG VM from latest template ($LATEST_TEMPLATE) to be ready..."
+              sleep 15
+            done
+          else
+            echo "⚠️ Found multiple previous triggers running ($PREV_RUNNING) → executing wait logic..."
+            wait_for_build "$PREV_TRIGGER_NAME" "$PREV_BUILD_ID"
+            # After waiting for one previous trigger, loop will re-evaluate PREV_RUNNING
           fi
         done
-
-
+        
   # ==========================================
   # Step 2: Generate version tag
   # ==========================================
