--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -110,7 +110,7 @@ steps:
           fi
         done
 
-  # ==========================================
+ # ==========================================
   # Step 2: Generate version tag
   # ==========================================
   - name: gcr.io/cloud-builders/gcloud
@@ -119,7 +119,7 @@ steps:
     args:
       - -c
       - |
-        VERSION_TAG="v-$$(date +%Y%m%d-%H%M%S)"
+        VERSION_TAG="v-$(date +%Y%m%d-%H%M%S)"
         echo "VERSION_TAG=$$VERSION_TAG" > /workspace/version.env
         echo "Generated version: $$VERSION_TAG"
 
@@ -173,13 +173,13 @@ steps:
       - |
         source /workspace/version.env
         echo "[MIG] Fetching MIG instance boot disk..."
-        VM_NAME=$$(gcloud compute instance-groups managed list-instances $${_MIG_NAME} --zone $${_ZONE} --format="value(instance.basename())" | head -n 1)
-        BOOT_DISK=$$(gcloud compute instances describe $$VM_NAME --zone=$${_ZONE} --format="value(disks[0].source.basename())")
+        VM_NAME=$(gcloud compute instance-groups managed list-instances ${_MIG_NAME} --zone ${_ZONE} --format="value(instance.basename())" | head -n 1)
+        BOOT_DISK=$(gcloud compute instances describe $$VM_NAME --zone=${_ZONE} --format="value(disks[0].source.basename())")
 
         echo "[IMAGE] Creating image from boot disk $$BOOT_DISK"
         gcloud compute images create backend-image-$$VERSION_TAG \
           --source-disk=$$BOOT_DISK \
-          --source-disk-zone=$${_ZONE} \
+          --source-disk-zone=${_ZONE} \
           --family=backend-family \
           --project=crested-polygon-472204-n5 \
           --force
@@ -220,8 +220,8 @@ steps:
         source /workspace/version.env
         echo "[MIG] Performing rolling update..."
         gcloud compute instance-groups managed rolling-action start-update \
-          $${_MIG_NAME} \
-          --zone=$${_ZONE} \
+          ${_MIG_NAME} \
+          --zone=${_ZONE} \
           --version "template=backend-template-$$VERSION_TAG" \
           --minimal-action=replace \
           --max-surge=1 \
@@ -229,15 +229,15 @@ steps:
         echo "[WAIT] Sleeping for 60 seconds before cleanup to let new VMs stabilize..."
         sleep 60
         echo "[CLEANUP] Deleting old instances (force)..."
-        OLD_INSTANCES=$$(gcloud compute instance-groups managed list-instances $${_MIG_NAME} --zone=$${_ZONE} --format="value(instance.basename())")
+        OLD_INSTANCES=$(gcloud compute instance-groups managed list-instances ${_MIG_NAME} --zone=${_ZONE} --format="value(instance.basename())")
         for VM in $$OLD_INSTANCES; do
-          gcloud compute instances delete $$VM --zone=$${_ZONE} --quiet --delete-disks=all || true
+          gcloud compute instances delete $$VM --zone=${_ZONE} --quiet --delete-disks=all || true
         done
 
 options:
   logging: CLOUD_LOGGING_ONLY
 substitutions:
-  _TRIGGER_NAME: "trigger-2"
+  _TRIGGER_NAME: "trigger-1"
   _MIG_NAME: "vamsi-mig"
   _ZONE: "asia-east1-b"
-  _GITHUB_REPO: "20481A04K2/repo2"
+  _GITHUB_REPO: "20481A04K2/repo1"
