--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,37 +1,58 @@
 steps:
   # ==========================================
-  # Step 1: Wait logic for running triggers and MIG VM readiness
+  # Step 1: Wait logic for running triggers
   # ==========================================
   - name: gcr.io/google.com/cloudsdktool/cloud-sdk
     entrypoint: bash
     args:
       - -c
       - |
-        echo "⏳ Checking ongoing triggers and MIG VM readiness..."
+        echo "⏳ Checking current trigger against actively running triggers..."
 
         WATCHED_TRIGGERS=("trigger-1" "trigger-3")
         CURRENT_TRIGGER="$${_TRIGGER_NAME:-trigger-2}"
-        MIG_NAME="vamsi-mig"
-        ZONE="asia-east1-b"
-
         echo "ℹ️ Current Trigger: $$CURRENT_TRIGGER"
 
-        # Get current build info for this trigger
         CURRENT_BUILD_INFO=$$(gcloud builds list --region=asia-east1 \
           --filter="status:(WORKING OR QUEUED) AND substitutions.TRIGGER_NAME=$$CURRENT_TRIGGER" \
-          --sort-by="~createTime" --limit=1 --format="value(id,createTime)")
+          --sort-by="~createTime" --limit=1 \
+          --format="value(id,createTime)")
 
         if [[ -z "$$CURRENT_BUILD_INFO" ]]; then
-          echo "⚠️ No ongoing build found for $$CURRENT_TRIGGER."
+          echo "⚠️ No ongoing build found for $$CURRENT_TRIGGER (maybe already finished)."
           exit 0
         fi
 
         CURRENT_BUILD_ID=$$(echo "$$CURRENT_BUILD_INFO" | awk '{print $$1}')
         CURRENT_START_TIME=$$(echo "$$CURRENT_BUILD_INFO" | awk '{print $$2}')
-
         echo "⏰ Current build $$CURRENT_BUILD_ID started at: $$CURRENT_START_TIME"
 
-        # Function to wait for a build to finish
+        SKIP_WAIT="true"
+        for TRIGGER in "$${WATCHED_TRIGGERS[@]}"; do
+          if [[ "$$TRIGGER" == "$$CURRENT_TRIGGER" ]]; then
+            continue
+          fi
+          LATEST_BUILD=$$(gcloud builds list --region=asia-east1 \
+            --filter="status:(WORKING OR QUEUED) AND substitutions.TRIGGER_NAME=$$TRIGGER" \
+            --sort-by="~createTime" --limit=1 \
+            --format="value(id,createTime)")
+          if [[ -n "$$LATEST_BUILD" ]]; then
+            OTHER_START=$$(echo "$$LATEST_BUILD" | awk '{print $$2}')
+            if [[ "$$OTHER_START" < "$$CURRENT_START_TIME" ]]; then
+              SKIP_WAIT="false"
+              echo "⏳ $$TRIGGER is still running and started earlier at $$OTHER_START"
+              break
+            fi
+          fi
+        done
+
+        if [[ "$$SKIP_WAIT" == "true" ]]; then
+          echo "✅ No earlier running triggers found → skipping wait logic."
+          exit 0
+        fi
+
+        echo "⚠️ Found earlier running trigger(s) → waiting for them to finish..."
+
         wait_for_build() {
           local TRIGGER_NAME=$$1
           local BUILD_ID=$$2
@@ -53,81 +74,27 @@ steps:
           fi
         }
 
-        # Loop to check ongoing triggers
-        while true; do
-          PREV_RUNNING=0
-          PREV_TRIGGER_NAME=""
-          PREV_BUILD_ID=""
+        for TRIGGER in "$${WATCHED_TRIGGERS[@]}"; do
+          if [[ "$$TRIGGER" == "$$CURRENT_TRIGGER" ]]; then
+            continue
+          fi
+          BUILD_INFO=$$(gcloud builds list --region=asia-east1 \
+            --filter="status:(WORKING OR QUEUED) AND substitutions.TRIGGER_NAME=$$TRIGGER" \
+            --sort-by="~createTime" --limit=1 \
+            --format="value(id,createTime)")
+          if [[ -z "$$BUILD_INFO" ]]; then
+            echo "ℹ️ No running build found for $$TRIGGER, skipping."
+            continue
+          fi
+          BUILD_ID=$$(echo "$$BUILD_INFO" | awk '{print $$1}')
+          BUILD_START=$$(echo "$$BUILD_INFO" | awk '{print $$2}')
 
-          for TRIGGER in "$${WATCHED_TRIGGERS[@]}"; do
-            if [[ "$$TRIGGER" == "$$CURRENT_TRIGGER" ]]; then
-              continue
-            fi
-
-            BUILD_INFO=$$(gcloud builds list --region=asia-east1 \
-              --filter="status:(WORKING OR QUEUED) AND substitutions.TRIGGER_NAME=$$TRIGGER" \
-              --sort-by="~createTime" --limit=1 --format="value(id,createTime)")
-
-            if [[ -n "$$BUILD_INFO" ]]; then
-              BUILD_START=$$(echo "$$BUILD_INFO" | awk '{print $$2}')
-              if [[ "$$BUILD_START" < "$$CURRENT_START_TIME" ]]; then
-                PREV_RUNNING=$$((PREV_RUNNING+1))
-                PREV_TRIGGER_NAME="$$TRIGGER"
-                PREV_BUILD_ID=$$(echo "$$BUILD_INFO" | awk '{print $$1}')
-              fi
-            fi
-          done
-
-          if [[ $$PREV_RUNNING -eq 0 ]]; then
-            echo "✅ No previous triggers running → skip wait and go to Step 2."
-            break
-          elif [[ $$PREV_RUNNING -eq 1 ]]; then
-            echo "⏳ One previous trigger ($$PREV_TRIGGER_NAME) is running → wait for MIG rolling update to start..."
-
-            # ✅ NEW LOGIC: Wait until MIG rolling update actually starts
-            while true; do
-              CURRENT_ACTIONS=$$(gcloud compute instance-groups managed list-instances $$MIG_NAME \
-                --zone=$$ZONE --format="value(currentAction)" | grep -v NONE || true)
-
-              if [[ -n "$$CURRENT_ACTIONS" ]]; then
-                echo "🔄 MIG rolling update detected, fetching latest template..."
-                break
-              fi
-
-              echo "⏱ Waiting for MIG rolling update to start..."
-              sleep 15
-            done
-
-            # Once rolling update started, get latest template being rolled out
-            LATEST_TEMPLATE=$$(gcloud compute instance-groups managed list-instances $$MIG_NAME \
-              --zone=$$ZONE \
-              --format="value(version.instanceTemplate.basename())" | sort | uniq | tail -n 1)
-
-            echo "ℹ️ Latest template being deployed: $$LATEST_TEMPLATE"
-
-            # Wait for at least one VM from this template to be healthy
-            while true; do
-              READY_VM=$$(gcloud compute instance-groups managed list-instances $$MIG_NAME \
-                  --zone=$$ZONE \
-                  --format="value(name,version.instanceTemplate.basename(),currentAction,healthState)" \
-                  | awk -v tmpl="$$LATEST_TEMPLATE" '$$2==tmpl && $$3=="NONE" {print $$1}' \
-                  | head -n1)
-
-              if [[ -n "$$READY_VM" ]]; then
-                echo "✅ MIG VM $$READY_VM from rolling update template $$LATEST_TEMPLATE is healthy → proceed to Step 2."
-                break 2
-              fi
-              echo "⏱ Waiting for MIG VM from template ($$LATEST_TEMPLATE) to be ready..."
-              sleep 15
-            done
-          else
-            echo "⚠️ Found multiple previous triggers running ($$PREV_RUNNING) → executing wait logic..."
-            wait_for_build "$$PREV_TRIGGER_NAME" "$$PREV_BUILD_ID"
-            # After waiting, loop will re-evaluate PREV_RUNNING
+          if [[ "$$BUILD_START" < "$$CURRENT_START_TIME" ]]; then
+            wait_for_build "$$TRIGGER" "$$BUILD_ID"
           fi
         done
 
- # ==========================================
+  # ==========================================
   # Step 2: Generate version tag
   # ==========================================
   - name: gcr.io/cloud-builders/gcloud
@@ -163,22 +130,84 @@ steps:
         cat << 'EOF' > startup-script.sh
         #!/bin/bash
         set -e
-
         echo "Installing Python and dependencies..."
         sudo apt-get update -y
-        sudo apt-get install -y python3 python3-pip unzip
-
-        cd /home/ubuntu
-        mkdir -p flask-app
-        cp /workspace/app/* flask-app/
-
+        sudo apt-get install -y python3 python3-pip unzip curl
+        mkdir -p /home/ubuntu/flask-app
+        cd /home/ubuntu/flask-app
+        git clone https://github.com/20481A04K2/repo1.git .
+        python3 -m venv venv
+        source venv/bin/activate
+        sleep 2
         echo "Installing Flask..."
-        pip3 install flask
-
+        pip install --upgrade pip
+        pip install flask
         echo "Starting Flask app..."
-        nohup python3 flask-app/app.py > flask.log 2>&1 &
+        nohup python app.py > flask.log 2>&1 &
+        # Check if Flask app started successfully
+        sleep 5
+        if pgrep -f "app.py" > /dev/null; then
+          STATUS="success"
+          echo "[STARTUP] Flask app started successfully."
+        else
+          STATUS="failure"
+          echo "[STARTUP] Flask app failed to start."
+        fi
+        # Trigger Cloud Function with status
+        CLOUD_FUNCTION_URL="https://function-613125347481.asia-south1.run.app"
+        curl -s -X POST "$$CLOUD_FUNCTION_URL" \
+        -H "Content-Type: application/json" \
+        -d "{\"status\":\"$$STATUS\", \"vm\":\"$$(hostname)\", \"pipeline\":\"my-pipeline\"}"
+        # Exit with proper code for Cloud Build
+        if [[ "$$STATUS" == "failure" ]]; then
+          exit 1
+        fi
         EOF
+  # ==========================================
+  # Step 4.5: Wait for previously running triggers before image creation
+  # ==========================================
+  - name: gcr.io/google.com/cloudsdktool/cloud-sdk
+    id: wait-before-image
+    entrypoint: bash
+    args:
+      - -c
+      - |
+        echo "⏳ Checking for earlier running triggers before image creation..."
+        WATCHED_TRIGGERS=("trigger-1" "trigger-3")
+        CURRENT_TRIGGER="$${_TRIGGER_NAME:-trigger-2}"
 
+        for TRIGGER in "$${WATCHED_TRIGGERS[@]}"; do
+          if [[ "$$TRIGGER" == "$$CURRENT_TRIGGER" ]]; then
+            continue
+          fi
+
+          BUILD_INFO=$$(gcloud builds list --region=asia-east1 \
+            --filter="status:(WORKING OR QUEUED) AND substitutions.TRIGGER_NAME=$$TRIGGER" \
+            --sort-by="~createTime" --limit=1 \
+            --format="value(id,createTime)")
+
+          if [[ -n "$$BUILD_INFO" ]]; then
+            BUILD_ID=$$(echo "$$BUILD_INFO" | awk '{print $$1}')
+            BUILD_START=$$(echo "$$BUILD_INFO" | awk '{print $$2}')
+            echo "⏳ Waiting for $$TRIGGER build $$BUILD_ID started at $$BUILD_START..."
+
+            while true; do
+              STATUS=$$(gcloud builds describe $$BUILD_ID --region=asia-east1 --format="value(status)")
+              if [[ "$$STATUS" == "SUCCESS" || "$$STATUS" == "FAILURE" || "$$STATUS" == "CANCELLED" ]]; then
+                echo "🔹 $$TRIGGER build $$BUILD_ID finished with status $$STATUS"
+                break
+              fi
+              sleep 15
+            done
+
+            if [[ "$$STATUS" != "SUCCESS" ]]; then
+              echo "⚠️ $$TRIGGER failed/cancelled, aborting image creation."
+              exit 1
+            fi
+          fi
+        done
+
+        echo "✅ No earlier running triggers — safe to create image."
   # ==========================================
   # Step 5: Create image from MIG VM
   # ==========================================
@@ -234,22 +263,91 @@ steps:
     args:
       - -c
       - |
+        set -e
         source /workspace/version.env
-        echo "[MIG] Performing rolling update..."
+
+        # Explicitly set MIG name and zone
+        MIG_NAME="${_MIG_NAME}"
+        ZONE="${_ZONE}"
+        LATEST_TEMPLATE="backend-template-$${VERSION_TAG}"
+        echo "$$MIG"
+        echo "[MIG] Performing rolling update with template: $$LATEST_TEMPLATE"
         gcloud compute instance-groups managed rolling-action start-update \
-          ${_MIG_NAME} \
-          --zone=${_ZONE} \
-          --version "template=backend-template-$$VERSION_TAG" \
+          "$$MIG_NAME" \
+          --zone="$$ZONE" \
+          --version="template=$$LATEST_TEMPLATE" \
           --minimal-action=replace \
           --max-surge=1 \
           --max-unavailable=0
-        echo "[WAIT] Sleeping for 60 seconds before cleanup to let new VMs stabilize..."
-        sleep 60
-        echo "[CLEANUP] Deleting old instances (force)..."
-        OLD_INSTANCES=$(gcloud compute instance-groups managed list-instances ${_MIG_NAME} --zone=${_ZONE} --format="value(instance.basename())")
-        for VM in $$OLD_INSTANCES; do
-          gcloud compute instances delete $$VM --zone=${_ZONE} --quiet --delete-disks=all || true
+
+        echo "[WAIT] Waiting for at least one healthy VM from new template ($$LATEST_TEMPLATE)..."
+        ATTEMPTS=0
+        MAX_ATTEMPTS=30
+
+        while true; do
+          # Check if any VM from the new template is running and action is NONE (ready)
+          READY_VM=$$(gcloud compute instance-groups managed list-instances "$$MIG_NAME" \
+            --zone="$$ZONE" \
+            --format="value(name,version.instanceTemplate.basename(),currentAction,healthState)" \
+            | awk -v tmpl="$$LATEST_TEMPLATE" '$$2==tmpl && $$3=="NONE" {print $$1}' | head -n1)
+
+          if [[ -n "$$READY_VM" ]]; then
+            echo "[SUCCESS] Found healthy RUNNING VM from new template: $$READY_VM"
+            break
+          fi
+
+          ATTEMPTS=$$((ATTEMPTS+1))
+          if [[ $$ATTEMPTS -ge $$MAX_ATTEMPTS ]]; then
+            echo "[WARNING] Timed out waiting for new VM from template $$LATEST_TEMPLATE. Proceeding to cleanup."
+            break
+          fi
+
+          echo "[WAIT] Attempt $$ATTEMPTS/$$MAX_ATTEMPTS - No ready VM yet. Retrying in 10s..."
+          sleep 10
         done
+
+        echo "[CLEANUP] Deleting old instances (not using new template)..."
+        OLD_INSTANCES=$$(gcloud compute instance-groups managed list-instances "$$MIG_NAME" \
+          --zone="$$ZONE" \
+          --format="value(name,version.instanceTemplate.basename())" \
+          | awk -v tmpl="$$LATEST_TEMPLATE" '$$2!=tmpl {print $$1}')
+
+        if [[ -z "$$OLD_INSTANCES" ]]; then
+          echo "[CLEANUP] No old instances found — nothing to delete."
+        else
+          echo "[CLEANUP] Deleting old instances: $$OLD_INSTANCES"
+          for VM in $$OLD_INSTANCES; do
+            echo "[DELETE] Deleting old instance: $$VM"
+            gcloud compute instances delete "$$VM" --zone="$$ZONE" --quiet --delete-disks=all || true
+          done
+        fi
+
+  # ==========================================
+  # Step 8: Poll Cloud Function for VM startup status
+  # ==========================================
+  - name: gcr.io/cloud-builders/gcloud
+    id: check-cloud-function
+    entrypoint: bash
+    args:
+      - '-c'
+      - |
+        echo "Polling Cloud Function for VM startup status..."
+        for i in {1..30}; do
+          RESPONSE=$$(curl -s https://function-613125347481.asia-south1.run.app)
+          STATUS=$$(echo $$RESPONSE | grep -oP '"status":"\K[^"]+')
+          if [[ "$$STATUS" == "success" ]]; then
+            echo "✅ Deployment SUCCESS"
+            exit 0
+          elif [[ "$$STATUS" == "failure" ]]; then
+            echo "❌ Deployment FAILURE"
+            exit 1
+          else
+            echo "Waiting for VM to report status..."
+            sleep 10
+          fi
+        done
+        echo "❌ Timeout waiting for VM startup script result"
+        exit 1
 
 options:
   logging: CLOUD_LOGGING_ONLY
