--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -208,27 +208,42 @@ steps:
       - -c
       - |
         echo "⏳ Checking for previous running triggers before image creation..."
-        WATCHED_TRIGGERS=("trigger-1" "trigger-3")
+        WATCHED_TRIGGERS=("trigger-1" "trigger-3")   # Triggers to watch
         CURRENT_TRIGGER="$${_TRIGGER_NAME:-trigger-2}"
+
+        # Get current trigger start time
+        CURRENT_BUILD_INFO=$$(gcloud builds list --region=asia-east1 \
+          --filter="substitutions.TRIGGER_NAME=$$CURRENT_TRIGGER" \
+          --sort-by="~createTime" --limit=1 --format="value(id,createTime)")
+
+        if [[ -z "$$CURRENT_BUILD_INFO" ]]; then
+          echo "✅ No current build found, proceeding with image creation."
+          exit 0
+        fi
+
+        CURRENT_BUILD_ID=$$(echo "$$CURRENT_BUILD_INFO" | awk '{print $$1}')
+        CURRENT_START_TIME=$$(echo "$$CURRENT_BUILD_INFO" | awk '{print $$2}')
+        CURRENT_EPOCH=$$(date -u -d "$$CURRENT_START_TIME" +%s)
 
         PREV_BUILD_ID=""
         PREV_TRIGGER=""
-        CURRENT_START_TIME=$$(date -u +"%Y-%m-%dT%H:%M:%S")
 
+        # Check for earlier builds
         for TRIGGER in "$${WATCHED_TRIGGERS[@]}"; do
           if [[ "$$TRIGGER" == "$$CURRENT_TRIGGER" ]]; then
             continue
           fi
 
           BUILD_INFO=$$(gcloud builds list --region=asia-east1 \
-            --filter="status:(WORKING OR QUEUED OR SUCCESS OR FAILURE OR CANCELLED) AND substitutions.TRIGGER_NAME=$$TRIGGER" \
-            --sort-by="~createTime" --limit=1 \
-            --format="value(id,createTime)")
+            --filter="substitutions.TRIGGER_NAME=$$TRIGGER" \
+            --sort-by="~createTime" --limit=1 --format="value(id,createTime)")
 
           if [[ -n "$$BUILD_INFO" ]]; then
             BUILD_ID=$$(echo "$$BUILD_INFO" | awk '{print $$1}')
             BUILD_START=$$(echo "$$BUILD_INFO" | awk '{print $$2}')
-            if [[ "$$BUILD_START" < "$$CURRENT_START_TIME" ]]; then
+            BUILD_EPOCH=$$(date -u -d "$$BUILD_START" +%s)
+
+            if [[ $$BUILD_EPOCH -lt $$CURRENT_EPOCH ]]; then
               PREV_BUILD_ID=$$BUILD_ID
               PREV_TRIGGER=$$TRIGGER
               echo "⏳ Found previous build $$PREV_BUILD_ID from $$PREV_TRIGGER started at $$BUILD_START"
@@ -242,6 +257,7 @@ steps:
           exit 0
         fi
 
+        # Wait for that previous build to finish
         echo "⏳ Waiting for previous build $$PREV_BUILD_ID ($$PREV_TRIGGER) to finish..."
         while true; do
           STATUS=$$(gcloud builds describe $$PREV_BUILD_ID --region=asia-east1 --format="value(status)")
@@ -254,8 +270,6 @@ steps:
         done
 
         echo "✅ Previous build completed — proceeding with image creation."
-
-
   # ==========================================
   # Step 5: Create image from MIG VM
   # ==========================================
