--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -9,7 +9,7 @@ steps:
       - |
         echo "⏳ Checking ongoing triggers and MIG VM readiness..."
 
-         WATCHED_TRIGGERS="$${_WATCHED_TRIGGER_NAMES: trigger-1,trigger-3,trigger-4}"
+        WATCHED_TRIGGERS="$${_WATCHED_TRIGGER_NAMES: trigger-1,trigger-3,trigger-4}"
         CURRENT_TRIGGER="$${_TRIGGER_NAME:-trigger-2}"
         MIG_NAME="vamsi-mig"
         ZONE="asia-east1-b"
@@ -30,9 +30,11 @@ steps:
         CURRENT_START_TIME=$$(echo "$$CURRENT_BUILD_INFO" | awk '{print $$2}')
 
         echo "⏰ Current build $$CURRENT_BUILD_ID started at: $$CURRENT_START_TIME"
-        # Store current trigger & start time & watched triggers for Step 4.5
-        echo "$$CURRENT_TRIGGER|$$CURRENT_START_TIME|$${_WATCHED_TRIGGERS}" > /workspace/trigger-info.txt
-         
+        # Initialize trigger-info.txt with current trigger info only
+        echo "$$CURRENT_TRIGGER|$$CURRENT_START_TIME" > /workspace/trigger-info.txt
+        echo "✅ Initial trigger-info.txt content:"
+        cat /workspace/trigger-info.txt
+
         # Function to wait for a build to finish
         wait_for_build() {
           local TRIGGER_NAME=$$1
@@ -85,6 +87,10 @@ steps:
             break
           elif [[ $$PREV_RUNNING -eq 1 ]]; then
             echo "⏳ One previous trigger ($$PREV_TRIGGER_NAME) is running → wait for MIG rolling update to start..."
+            # Append previous trigger info to trigger-info.txt
+            echo "$$PREV_TRIGGER_NAME|$$PREV_BUILD_TIME" >> /workspace/trigger-info.txt
+            echo "📄 Updated trigger-info.txt with previous trigger info:"
+            cat /workspace/trigger-info.txt
 
             # ✅ NEW LOGIC: Wait until MIG rolling update actually starts
             while true; do
@@ -199,9 +205,6 @@ steps:
           exit 1
         fi
         EOF
-
-  # ==========================================
-  # Step 4.5: Wait for watched triggers after Step 1
   # ==========================================
   - name: gcr.io/google.com/cloudsdktool/cloud-sdk
     id: wait-before-image
@@ -209,54 +212,44 @@ steps:
     args:
       - -c
       - |
-        echo "⏳ Checking watched triggers before image creation..."
+        echo "⏳ Checking watched triggers before proceeding..."
 
         if [[ ! -f /workspace/trigger-info.txt ]]; then
-          echo "⚠️ No trigger info found from Step 1 — proceeding with image creation."
+          echo "⚠️ No trigger info found from Step 1 — proceeding without wait."
           exit 0
         fi
 
-        INFO=$$(cat /workspace/trigger-info.txt)
-        CURRENT_TRIGGER=$$(echo "$$INFO" | cut -d '|' -f 1)
-        CURRENT_START_TIME=$$(echo "$$INFO" | cut -d '|' -f 2)
-        IFS=',' read -r -a WATCHED_TRIGGERS <<< "$$(echo "$$INFO" | cut -d '|' -f 3)"
+        echo "📄 trigger-info.txt content:"
+        cat /workspace/trigger-info.txt
 
-        echo "ℹ️ Current Trigger: $$CURRENT_TRIGGER"
-        echo "ℹ️ Current Build Start Time: $$CURRENT_START_TIME"
-        echo "ℹ️ Watched Triggers: $${WATCHED_TRIGGERS[*]}"
+        CURRENT_TRIGGER=$$(head -n 1 /workspace/trigger-info.txt | cut -d '|' -f 1)
+        CURRENT_START=$$(head -n 1 /workspace/trigger-info.txt | cut -d '|' -f 2)
+        PREV_TRIGGER=$$(tail -n 1 /workspace/trigger-info.txt | cut -d '|' -f 1)
+        PREV_START=$$(tail -n 1 /workspace/trigger-info.txt | cut -d '|' -f 2)
 
-        PREV_FOUND=0
-
-        for TRIGGER in "$${WATCHED_TRIGGERS[@]}"; do
-          BUILD_INFO=$$(gcloud builds list --region=asia-east1 \
-            --filter="substitutions.TRIGGER_NAME=$$TRIGGER AND createTime>=$$CURRENT_START_TIME" \
-            --sort-by="~createTime" --limit=1 --format="value(id,status)")
-
-          if [[ -n "$$BUILD_INFO" ]]; then
-            PREV_FOUND=1
-            BUILD_ID=$$(echo "$$BUILD_INFO" | awk '{print $$1}')
-            STATUS=$$(echo "$$BUILD_INFO" | awk '{print $$2}')
-            echo "⏳ Found watched build $$BUILD_ID from $$TRIGGER with status $$STATUS"
-
-            if [[ "$$STATUS" == "WORKING" || "$$STATUS" == "QUEUED" ]]; then
-              echo "⏳ Waiting for $$TRIGGER build $$BUILD_ID to finish..."
-              while true; do
-                STATUS=$$(gcloud builds describe $$BUILD_ID --region=asia-east1 --format="value(status)")
-                if [[ "$$STATUS" == "SUCCESS" || "$$STATUS" == "FAILURE" || "$$STATUS" == "CANCELLED" ]]; then
-                  echo "🔹 $$TRIGGER build $$BUILD_ID finished with $$STATUS → proceed."
-                  break
-                fi
-                echo "⏱ Still running... waiting 15s"
-                sleep 15
-              done
-            fi
-          fi
-        done
-
-        if [[ $$PREV_FOUND -eq 0 ]]; then
-          echo "✅ No watched triggers started after current build — skipping wait."
+        echo "ℹ️ Current Trigger: $$CURRENT_TRIGGER (started $$CURRENT_START)"
+        if [[ "$$PREV_TRIGGER" != "$$CURRENT_TRIGGER" ]]; then
+          echo "ℹ️ Previous Trigger: $$PREV_TRIGGER (started $$PREV_START)"
         fi
 
+        if [[ -n "$$PREV_START" && "$$PREV_START" > "$$CURRENT_START" ]]; then
+          echo "⏳ Waiting for previous trigger $$PREV_TRIGGER to finish..."
+          while true; do
+            STATUS=$$(gcloud builds list \
+              --filter="substitutions.TRIGGER_NAME=$$PREV_TRIGGER" \
+              --sort-by="~startTime" --limit=1 \
+              --format="value(status)" || echo "")
+            echo "   → Current status: $$STATUS"
+            if [[ "$$STATUS" == "SUCCESS" || "$$STATUS" == "FAILURE" || "$$STATUS" == "CANCELLED" ]]; then
+              echo "✅ Previous trigger $$PREV_TRIGGER finished with $$STATUS → continue."
+              break
+            fi
+            echo "⏱ Waiting 20s before re-check..."
+            sleep 20
+          done
+        else
+          echo "✅ No later previous trigger detected — proceed."
+        fi
 
   # ==========================================
   # Step 5: Create image from MIG VM
@@ -403,7 +396,7 @@ options:
   logging: CLOUD_LOGGING_ONLY
 substitutions:
   _TRIGGER_NAME: "trigger-2"
-  _WATCHED_TRIGGER_NAMES: "trigger-2,trigger-3,trigger-4"
+  _WATCHED_TRIGGER_NAMES: "trigger-1,trigger-3,trigger-4"
   _MIG_NAME: "vamsi-mig"
   _ZONE: "asia-east1-b"
   _GITHUB_REPO: "20481A04K2/repo2"
